--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,40 @@
 </div>
 
 <div>
-	<h4>Style Binding</h4>
+	<h4>Event Binding</h4>
+	<button (click)="eveClick()">(click)="eveClick()"</button><br>
+	{{var1}}<hr/>
+	<button (click)="eveClick($event)">(click)="eveClick($event)"</button><br>
+	{{var1}}<hr/>
+	<button (click)="var1='newVar1 value'">(click)="var1='newVar1 value'"</button><br>
+	{{var1}}<hr/>
+	<button ></button><hr/>
 
+
+</div><hr/>
+
+<div>
+	<h4>Style Binding</h4>
+	<p [style.color]="'orange'"> '['style.color']'="'orange'" </p>
+	<p [style.color]="special?'brown':'orange'"> '['style.color']'="special?'brown':'orange'" </p>
+	<p [style.color]="special2?'brown':'orange'"> '['style.color']'="special2?'brown':'orange'" </p>
+	<p [style.color]="special3?'brown':'orange'"> '['style.color']'="special3?'brown':'orange'" </p>
+
+	<p [ngStyle]="styleObj">[ngStyle] </p>
+
+	<p [class.p-crit]="propSuc">Testing para 2-3 </p>
+	<p [class.p-crit]="boolVal">Testing para 2-4 </p>
 </div><hr/>
 
 <div>
 	<h4>Class Binding</h4>
 	<P>{{ 2+3 }}</P>
-	<p class="p-warn">Testing para 1 </p>
-	<p [class]="propSuc">Testing para 2-1 </p>
-	<p [class]="propsuc">Testing para 2-2 </p>
+	<p class="p-warn"> class="p-warn" </p>
+	<p [class]="propSuc">[class]="propSuc"</p>
+	<p [class]="propsuc">[class]="propsuc" | case sensitive </p>
 
-	<p [class.p-crit]="propSuc">Testing para 2-3 </p>
-	<p [class.p-crit]="boolVal">Testing para 2-4 </p>
+	<p [class.p-crit]="propSuc">[class.p-crit]="propSuc" </p>
+	<p [class.p-crit]="boolVal">[class.p-crit]="boolVal" </p>
 
 
 	<p [ngClass]="msgObj">Testing para 2-5 </p>
@@ -30,12 +51,13 @@
 
 <div>
 	<h4>Property Binding</h4>
-	<input type="text" [disabled]="isDisabled" value="text1 value"> <br>
+	<input type="text" [disabled]="isDisabled" value="[disabled]='isDisabled'"> <br>
+	<input type="text" bind-disabled="isDisabled" value="bind-disabled='isDisabled'"> <br>
 	<input type="text" value="text1 value"> <br>
 
 	<input type="text" name="txt1" id="txt1" value="text1 value"> <br>
-	<input type="text" [id]="txt2" value="text2 value"> <br>
-	<input type="text" id="{{txt3}}" value="text3 value"> <br>
+	<input type="text" [id]="txt2" value="[id]='txt2'"> <br>
+	<input type="text" id="{{txt3}}" value="id='{{'txt3'}}'"> <br>
 	<input type="text" id={{txt4}} value="text4 value"> <br>
 </div>
 
