--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,11 +15,12 @@
 	<li><a routerLink="/dep2" routerLinkActive="active">tut2</a></li>
 	<li><a routerLink="/dep3" routerLinkActive="active">tut3</a></li>
 	<li><a routerLink="/studs" routerLinkActive="active">Students</a></li>
+	<li><a routerLink="/pal/form1" routerLinkActive="active">Form1</a></li>
 </nav>
 
-<div>
+<!--	div>
 	<app-tut2></app-tut2>
-</div><hr/>
+</div--><hr/>
 
 <!--div>
 	<app-tut2 (childEve)="childMsg=$event" [parentData]="name"></app-tut2>
