--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,16 @@
+
 /* You can add global styles to this file, and also import other style files */
 
+@import "~bootstrap/dist/css/bootstrap.css";
 
 
 nav li a.active{
 	color: green;
 	font-size: 8px;
 }
+
+
+body{
+	padding: 10px 20px 10px 20px;
+}
+
